--- a/server/goals_backend/requirements.txt
+++ b/server/goals_backend/requirements.txt
@@ -1,4 +1,6 @@
 Django>=4.2.0
 django-cors-headers>=4.3.0
 djangorestframework>=3.14.0
-python-dotenv>=1.0.0
+djangorestframework
+djangorestframework-simplejwt
+python-dotenv>=1.0.0gunicorn
