--- a/server/goals_backend/requirements.txt
+++ b/server/goals_backend/requirements.txt
@@ -1,10 +1,13 @@
-Django>=4.2.0
-django-cors-headers>=4.3.0
-djangorestframework>=3.14.0
-djangorestframework-simplejwt
-python-dotenv>=1.0.0
-gunicorn
-psycopg2-binary
-dj-database-url
-python-decouple
-whitenoise
+asgiref==3.8.1
+dj-database-url==2.3.0
+Django==4.2.17
+django-cors-headers==4.6.0
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+gunicorn==23.0.0
+packaging==24.2
+psycopg2-binary==2.9.10
+PyJWT==2.10.1
+python-decouple==3.8
+sqlparse==0.5.3
+typing_extensions==4.12.2
